# Masterproject

./: .gitignore  CMakeLists.txt  README.md  WholeBodyMotionConfig.cmake.in  WholeBodyMotionConfigVersion.cmake.in
MATLAB/: geodesic_movement_generation01.m  geodesic_movement_generation02.m  geodesic_movement_generation_temporal01.m
MATLAB/fcts/: compute_acceleration_geodesic_spray_field.m  compute_derivative_acceleration_geodesic_spray_field.m  compute_geodesic_bvp.m  compute_geodesic_ivp.m  compute_inertia.m  compute_joint_derivative_Jacobian.m  compute_joint_derivative_inertia.m  compute_joint_second_derivative_Jacobian.m  compute_joint_second_derivative_inertia.m  curve_length.m  first_order_geodesic_ode.m  geodesic_ode.m  jacobian_geodesic_ode.m  plotArm.m  plotArmBasis.m  plotArmLink.m  tmprod.m
applications/: CMakeLists.txt
applications/GeodesicGenerator/: CMakeLists.txt  GeodesicGenerator.cpp
applications/MotionAdaption/: CMakeLists.txt  MotionAdaption.cpp  MotionAdaptionConfiguration.h
applications/MotionGeneration/: CMakeLists.txt  MotionGeneration.cpp  MotionGenerationConfiguration.h
applications/OdeIntTest/: CMakeLists.txt  OdeIntTest.cpp
applications/WalkingAdaption/: CMakeLists.txt  WalkingAdaption.cpp  WalkingAdaptionConfiguration.h
applications/WholeBodyMotionAnalysis/: CMakeLists.txt  WholeBodyMotionAnalysis.cpp  WholeBodyMotionAnalysisConfiguration.h
data/Models/Winter/: mmm.xml
data/Models/Winter/models/: BTSegment_joint_visu.wrl  BTy_joint_visu.wrl  BUNsegment_joint_visu.wrl  HeadSegment_joint_visu.wrl  LAsegment_joint_visu.wrl  LAy_joint_visu.wrl  LEsegment_joint_visu.wrl  LFx_joint_visu.wrl  LHsegment_joint_visu.wrl  LKsegment_joint_visu.wrl  LMrot_joint_visu.wrl  LSCsegment_joint_visu.wrl  LSsegment_joint_visu.wrl  LWsegment_joint_visu.wrl  LWy_joint_visu.wrl  LeftEyeSegmentY_joint_visu.wrl  LeftFingerJoint11y_joint_visu.wrl  LeftFingerJoint12y_joint_visu.wrl  LeftFingerJoint13y_joint_visu.wrl  LeftFingerJoint21y_joint_visu.wrl  LeftFingerJoint22y_joint_visu.wrl  LeftFingerJoint23y_joint_visu.wrl  LeftFingerJoint31y_joint_visu.wrl  LeftFingerJoint32y_joint_visu.wrl  LeftFingerJoint33y_joint_visu.wrl  LeftFingerJoint40y_joint_visu.wrl  LeftFingerJoint41y_joint_visu.wrl  LeftFingerJoint42y_joint_visu.wrl  LeftFingerJoint43y_joint_visu.wrl  LeftFingerJoint50y_joint_visu.wrl  LeftFingerJoint51y_joint_visu.wrl  LeftFingerJoint52y_joint_visu.wrl  LeftFingerJoint53y_joint_visu.wrl  RAsegment_joint_visu.wrl  RAy_joint_visu.wrl  REsegment_joint_visu.wrl  RFx_joint_visu.wrl  RHsegment_joint_visu.wrl  RKsegment_joint_visu.wrl  RMrot_joint_visu.wrl  (+22 more)
data/Models/Winter/models/collada/: BTSegment_joint_visu.dae  BTy_joint_visu.dae  BUNsegment_joint_visu.dae  ConvertScript.txt  HeadSegment_joint_visu.dae  LAsegment_joint_visu.dae  LAy_joint_visu.dae  LEsegment_joint_visu.dae  LFx_joint_visu.dae  LHsegment_joint_visu.dae  LKsegment_joint_visu.dae  LMrot_joint_visu.dae  LSCsegment_joint_visu.dae  LSsegment_joint_visu.dae  LWsegment_joint_visu.dae  LWy_joint_visu.dae  LeftEyeSegmentY_joint_visu.dae  LeftFingerJoint11y_joint_visu.dae  LeftFingerJoint12y_joint_visu.dae  LeftFingerJoint13y_joint_visu.dae  LeftFingerJoint21y_joint_visu.dae  LeftFingerJoint22y_joint_visu.dae  LeftFingerJoint23y_joint_visu.dae  LeftFingerJoint31y_joint_visu.dae  LeftFingerJoint32y_joint_visu.dae  LeftFingerJoint33y_joint_visu.dae  LeftFingerJoint40y_joint_visu.dae  LeftFingerJoint41y_joint_visu.dae  LeftFingerJoint42y_joint_visu.dae  LeftFingerJoint43y_joint_visu.dae  LeftFingerJoint50y_joint_visu.dae  LeftFingerJoint51y_joint_visu.dae  LeftFingerJoint52y_joint_visu.dae  LeftFingerJoint53y_joint_visu.dae  RAsegment_joint_visu.dae  RAy_joint_visu.dae  REsegment_joint_visu.dae  RFx_joint_visu.dae  RHsegment_joint_visu.dae  RKsegment_joint_visu.dae  (+23 more)
data/Motions/MMM/: euclidean.xml  euclidean_tem.xml  output.xml  riemannian.xml  temporal1.xml  walking-eu.xml  walking-ri.xml  walking_medium01_motion395.xml  wave_left01.xml
source/: CMakeLists.txt
source/WholeBodyMotion/: CMakeLists.txt
source/WholeBodyMotion/MotionHandler/: CMakeLists.txt
source/WholeBodyMotion/MotionHandler/WholeBodyMotionHandler/: CMakeLists.txt  WholeBodyMotionHandler.cpp  WholeBodyMotionHandler.h  WholeBodyMotionHandlerDialog.cpp  WholeBodyMotionHandlerDialog.h  WholeBodyMotionHandlerDialog.ui  WholeBodyMotionHandlerFactory.cpp  WholeBodyMotionHandlerFactory.h
source/WholeBodyMotion/MotionPlot/: CMakeLists.txt
source/WholeBodyMotion/MotionPlot/GeodesicAccelerationPlot/: CMakeLists.txt  GeodesicAccelerationPlot.cpp  GeodesicAccelerationPlot.h  GeodesicAccelerationPlotFactory.cpp  GeodesicAccelerationPlotFactory.h
source/WholeBodyMotion/WholeBodyMotionLib/: BVP_Plant.h  BVP_Solver.h  CMakeLists.txt  RBDLExtension.cpp  RBDLExtension.h  Tools.cpp  Tools.h  drake_test.h
